--- a/index.html
+++ b/index.html
@@ -34,11 +34,16 @@
             text-align: center;
             padding: 50px 20px;
         }
+        #shop {
+            display: flex;
+            justify-content: center;
+            gap: 20px; /* Odstępy między elementami */
+            flex-wrap: wrap; /* Jeśli miejsca zabraknie, przejdź do nowego wiersza */
+        }
         .store-item {
             background-color: #222;
             border: 2px solid #444;
             padding: 20px;
-            margin: 20px auto;
             width: 300px;
             border-radius: 10px;
         }
@@ -104,7 +109,7 @@
 
     <!-- Stopka -->
     <footer>
-       <p>Dołącz do naszego <a href="https://discord.gg/kHA4e6nd" target="_blank" style="color: #0000EE;">Discorda</a></p>
+       <p>Dołącz do naszego <a href="https://discord.gg/kHA4e6nd" target="_blank" style="color: #1E90FF;">Discorda</a></p>
        <p>&copy; 2024 SkibidiCraft.pl</p>
     </footer>
 </body>
